tests/NormalTests/paczka1/fuzzy1/80314149.err
Error in line 1: hUkKmgKD A162 62,2
Error in line 5: OEXH A162 68,4
Error in line 13: elgx2V A789 1,1
Error in line 23: hUkKmgKD A789 70,8
Error in line 34: hUkKmgKD A789 68,4
Error in line 35: hUkKmgKD S533 42,1
